
wxMSW:

- Fix compilation with C++Builder XE compiler (Nichka).
- Fix best height of wxSlider with labels but without ticks (Artur Wieczorek).
- Fix initial text value of wxSpinCtrlDouble (Laurent Poujoulat).
- Fix best size calculation for bitmaps with buttons (Artur Wieczorek).
- Fix size of the icon returned from wxFSVolume::GetIcon() (troelsk).


3.0.2: (released 2014-10-06)
----------------------------

All:

- Fix silent data loss in wx[F]File::Write(wxString) if conversion fails.
- Make wxString::FromCDouble() work when the global C++ locale is not the C one.
- Add support for "%V", "%G" and "%g" to wxDateTime::Format().

All (GUI):

- Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
- Implement bounding box computation in wxGCDC (Toni Ruža).
- Fix saving GIF animations with 2.5s+ delays between frames (elvissteinjr).
- Add "variant" property to windows in XRC.
- Add XRC handler for wxSimplebook.
- Return correct value from wxCommandEvent::GetString() for programmatically
  generated wxEVT_TEXT events from wxComboBox.
- Accept "default" as font family value in XRC (pieleric).
- Send events when toggling wxPropertyGrid nodes from keyboard (Armel Asselin).

wxGTK:

- Fix mouse handling in wxNotebook containing wxListCtrl (Charlie Fenton).
- Fix layout of wxSearchCtrl to not truncate text in it.

wxMSW:

- Fix Cygwin 1.7 build.
- Work around a bug in MinGW 4.8 headers and fix build with it too.
- Include x64 configurations in MSVC 8/9 project files too.
- Fix parallel build of MSVC 11/12 solutions (Artur Wieczorek).
- Fix background of wxRadioBox buttons and wxSlider (Artur Wieczorek).
- Fix appearance of wxToggleButtons with non default colours (Artur Wieczorek).
- Fix drawing on wxDC when using right-to-left layout (Artur Wieczorek).
- Fix wxGrid appearance and behaviour in RTL (Artur Wieczorek).
- Fix creating wxBitmap from monochrome wxIcon or wxCursor (Artur Wieczorek).
- Fix handling of bitmaps with alpha in wxImageList (Artur Wieczorek).